[gd_scene load_steps=25 format=2]

[ext_resource path="res://stages/level/PauseLabel.gd" type="Script" id=1]
[ext_resource path="res://stages/level/Cheats.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/hud/Hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://content/sounds/monster/ambience/BattleAmbience.tscn" type="PackedScene" id=4]
[ext_resource path="res://content/monster/WaveGenerator.tscn" type="PackedScene" id=5]
[ext_resource path="res://content/keeper/keeper1/Keeper1.tscn" type="PackedScene" id=6]
[ext_resource path="res://content/map/Map.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/dome/dome1/Dome1.tscn" type="PackedScene" id=8]
[ext_resource path="res://content/shared/Overlay.tscn" type="PackedScene" id=9]
[ext_resource path="res://content/map/tileset.tres" type="TileSet" id=10]
[ext_resource path="res://gui/theme.tres" type="Theme" id=11]
[ext_resource path="res://content/map/TileData.gd" type="Script" id=12]
[ext_resource path="res://content/monster/Monsters.gd" type="Script" id=13]
[ext_resource path="res://systems/audio/CurveAttenuation.gd" type="Script" id=14]
[ext_resource path="res://test/ornaments/OrnamentTest.gd" type="Script" id=15]
[ext_resource path="res://systems/audio/EffectHandler.gd" type="Script" id=16]
[ext_resource path="res://systems/camera/CameraSingleTarget.gd" type="Script" id=17]

[sub_resource type="Curve2D" id=31]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -521, -378, 0, 0, 0, 0, -520, -505, 0, 0, 0, 0, -365, -505 )
}

[sub_resource type="Curve2D" id=32]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 515, -406, 0, 0, 0, 0, 514, -505, 0, 0, 0, 0, 386, -505 )
}

[sub_resource type="Shader" id=28]
code = "shader_type canvas_item;

//  noise texture (see Dissolve.material for GUI Generated one or Main.gd::_on_reseed_noise_pressed() for scripted one)
uniform sampler2D noise_tex : hint_albedo;
// size of burning path (0 is infinitely short)
uniform float burn_size : hint_range(0.1, 1);

// position (time) of burning
uniform float burn_position : hint_range(-1, 1);

void fragment()
{
	// get texture pixel color * tint
	// thats our result without burning effect.
	// We use COLOR as final color (we can use variable and assign it to COLOR at the end, but there is no reason to care)
	// TEXTURE is Sprite.Texture from GODOT
	// UV is UV from GODOT
	// At first, COLOR is filled with tint (Sprite -> Modulate) from GODOT (and from vertex shader).
	COLOR = texture(TEXTURE, UV) * COLOR;
	
	// get some noise minus our position in time (thats why burn_position is range(-1, 1))
	float test = texture(noise_tex, UV).r - burn_position;
	
	// if our noise is bigger then treshold
	if (test < burn_size) {
		// get burn color from ramp

		// override result rgb color with burn rgb color (NOT alpha!)
		//COLOR.rgb = burn.rgb;
		
		// and set alpha to lower one from texture or burn.
		// that means we keep transparent sprite (COLOR.a is lower) and transparent 'burned pathes' (burn.a is lower)
		COLOR.a = 0.0;
	}
}"

[sub_resource type="OpenSimplexNoise" id=33]
period = 4.3
persistence = 0.0

[sub_resource type="NoiseTexture" id=30]
width = 128
height = 128
noise = SubResource( 33 )

[sub_resource type="ShaderMaterial" id=34]
shader = SubResource( 28 )
shader_param/burn_size = 0.1
shader_param/burn_position = 0.538
shader_param/noise_tex = SubResource( 30 )

[sub_resource type="Curve2D" id=35]
_data = {
"points": PoolVector2Array( 11.6411, 11.9557, -11.6411, -11.9557, 0, 0, -175.561, 2.20237, 175.561, -2.20237, 287, -148 )
}

[node name="OrnamentTest" type="Node"]
script = ExtResource( 15 )

[node name="Map" parent="." instance=ExtResource( 7 )]
pause_mode = 0

[node name="TileData" type="Node2D" parent="."]
position = Vector2( -12, 72 )
z_index = 50
script = ExtResource( 12 )

[node name="Biomes" type="TileMap" parent="TileData"]
visible = false
tile_set = ExtResource( 10 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( -65537, 10, 0, -131072, 10, 0, -131071, 10, 0, -1, 10, 0, -65536, 10, 0, -65535, 10, 0, 65529, 12, 0, 65530, 12, 0, 65531, 12, 0, 65532, 12, 0, 65533, 12, 0, 65534, 12, 0, 65535, 12, 0, 0, 12, 0, 1, 12, 0, 2, 12, 0, 3, 12, 0, 4, 12, 0, 5, 12, 0, 6, 12, 0, 7, 12, 0, 8, 12, 0, 131065, 12, 0, 131066, 12, 0, 131067, 12, 0, 131068, 12, 0, 131069, 12, 0, 131070, 12, 0, 131071, 12, 0, 65536, 12, 0, 65537, 12, 0, 65538, 12, 0, 65539, 12, 0, 65540, 12, 0, 65541, 12, 0, 65542, 12, 0, 65543, 12, 0, 65544, 12, 0, 196601, 12, 0, 196602, 12, 0, 196603, 12, 0, 196604, 12, 0, 196605, 12, 0, 196606, 12, 0, 196607, 12, 0, 131072, 12, 0, 131073, 12, 0, 131074, 12, 0, 131075, 12, 0, 131076, 12, 0, 131077, 12, 0, 131078, 12, 0, 131079, 12, 0, 131080, 12, 0, 262137, 12, 0, 262138, 12, 0, 262139, 12, 0, 262140, 12, 0, 262141, 12, 0, 262142, 12, 0, 262143, 12, 0, 196608, 12, 0, 196609, 12, 0, 196610, 12, 0, 196611, 12, 0, 196612, 12, 0, 196613, 12, 0, 196614, 12, 0, 196615, 12, 0, 196616, 12, 0, 327673, 12, 0, 327674, 12, 0, 327675, 12, 0, 327676, 12, 0, 327677, 12, 0, 327678, 12, 0, 327679, 12, 0, 262144, 12, 0, 262145, 12, 0, 262146, 12, 0, 262147, 12, 0, 262148, 12, 0, 262149, 12, 0, 262150, 12, 0, 262151, 12, 0, 262152, 12, 0, 393209, 12, 0, 393210, 12, 0, 393211, 12, 0, 393212, 12, 0, 393213, 12, 0, 393214, 12, 0, 393215, 12, 0, 327680, 12, 0, 327681, 12, 0, 327682, 12, 0, 327683, 12, 0, 327684, 12, 0, 327685, 12, 0, 327686, 12, 0, 327687, 12, 0, 327688, 12, 0, 458745, 12, 0, 458746, 12, 0, 458747, 12, 0, 458748, 12, 0, 458749, 12, 0, 458750, 12, 0, 458751, 12, 0, 393216, 12, 0, 393217, 12, 0, 393218, 12, 0, 393219, 12, 0, 393220, 12, 0, 393221, 12, 0, 393222, 12, 0, 393223, 12, 0, 393224, 12, 0, 524281, 14, 0, 524282, 14, 0, 524283, 14, 0, 524284, 14, 0, 524285, 14, 0, 524286, 12, 0, 524287, 12, 0, 458752, 12, 0, 458753, 12, 0, 458754, 12, 0, 458755, 12, 0, 458756, 12, 0, 458757, 12, 0, 458758, 12, 0, 458759, 12, 0, 458760, 12, 0, 589817, 14, 0, 589818, 14, 0, 589819, 14, 0, 589820, 14, 0, 589821, 14, 0, 589822, 14, 0, 589823, 14, 0, 524288, 14, 0, 524289, 14, 0, 524290, 14, 0, 524291, 14, 0, 524292, 14, 0, 524293, 14, 0, 524294, 14, 0, 524295, 14, 0, 524296, 12, 0, 655353, 14, 0, 655354, 14, 0, 655355, 14, 0, 655356, 14, 0, 655357, 14, 0, 655358, 14, 0, 655359, 14, 0, 589824, 14, 0, 589825, 14, 0, 589826, 14, 0, 589827, 14, 0, 589828, 14, 0, 589829, 14, 0, 589830, 14, 0, 589831, 14, 0, 589832, 14, 0, 720889, 14, 0, 720890, 14, 0, 720891, 14, 0, 720892, 14, 0, 720893, 14, 0, 720894, 14, 0, 720895, 14, 0, 655360, 14, 0, 655361, 14, 0, 655362, 14, 0, 655363, 14, 0, 655364, 14, 0, 655365, 14, 0, 655366, 14, 0, 655367, 14, 0, 655368, 14, 0, 786425, 14, 0, 786426, 14, 0, 786427, 14, 0, 786428, 14, 0, 786429, 14, 0, 786430, 14, 0, 786431, 14, 0, 720896, 14, 0, 720897, 14, 0, 720898, 14, 0, 720899, 14, 0, 720900, 14, 0, 720901, 14, 0, 720902, 14, 0, 720903, 14, 0, 720904, 14, 0, 851961, 14, 0, 851962, 14, 0, 851963, 14, 0, 851964, 14, 0, 851965, 14, 0, 851966, 14, 0, 851967, 14, 0, 786432, 14, 0, 786433, 14, 0, 786434, 14, 0, 786435, 14, 0, 786436, 14, 0, 786437, 14, 0, 786438, 14, 0, 786439, 14, 0, 786440, 14, 0 )

[node name="Hardness" type="TileMap" parent="TileData"]
visible = false
tile_set = ExtResource( 10 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( -8, 18, 0, -7, 18, 0, -6, 18, 0, -5, 18, 0, -4, 18, 0, -3, 18, 0, -2, 18, 0, -1, 18, 0, -65536, 13, 0, -65535, 18, 0, -65534, 18, 0, -65533, 18, 0, -65532, 18, 0, -65531, 18, 0, -65530, 18, 0, -65529, 18, 0, -65528, 18, 0, -65527, 18, 0, 65528, 18, 0, 65529, 13, 0, 65530, 13, 0, 65531, 13, 0, 65532, 13, 0, 65533, 13, 0, 65534, 13, 0, 65535, 13, 0, 0, 13, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 13, 0, 7, 13, 0, 8, 13, 0, 9, 18, 0, 131064, 18, 0, 131065, 13, 0, 131066, 13, 0, 131067, 13, 0, 131068, 13, 0, 131069, 13, 0, 131070, 13, 0, 131071, 13, 0, 65536, 13, 0, 65537, 13, 0, 65538, 13, 0, 65539, 13, 0, 65540, 13, 0, 65541, 13, 0, 65542, 13, 0, 65543, 13, 0, 65544, 13, 0, 65545, 18, 0, 196600, 18, 0, 196601, 13, 0, 196602, 13, 0, 196603, 13, 0, 196604, 13, 0, 196605, 13, 0, 196606, 13, 0, 196607, 13, 0, 131072, 13, 0, 131073, 13, 0, 131074, 13, 0, 131075, 13, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 131079, 13, 0, 131080, 13, 0, 131081, 18, 0, 262136, 18, 0, 262137, 13, 0, 262138, 13, 0, 262139, 13, 0, 262140, 13, 0, 262141, 13, 0, 262142, 13, 0, 262143, 13, 0, 196608, 13, 0, 196609, 13, 0, 196610, 13, 0, 196611, 13, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 196615, 13, 0, 196616, 13, 0, 196617, 18, 0, 327672, 18, 0, 327673, 13, 0, 327674, 13, 0, 327675, 13, 0, 327676, 13, 0, 327677, 13, 0, 327678, 13, 0, 327679, 13, 0, 262144, 13, 0, 262145, 13, 0, 262146, 13, 0, 262147, 13, 0, 262148, 13, 0, 262149, 13, 0, 262150, 13, 0, 262151, 13, 0, 262152, 13, 0, 262153, 18, 0, 393208, 18, 0, 393209, 13, 0, 393210, 13, 0, 393211, 13, 0, 393212, 13, 0, 393213, 13, 0, 393214, 13, 0, 393215, 13, 0, 327680, 13, 0, 327681, 13, 0, 327682, 13, 0, 327683, 13, 0, 327684, 13, 0, 327685, 13, 0, 327686, 13, 0, 327687, 13, 0, 327688, 13, 0, 327689, 18, 0, 458744, 18, 0, 458745, 13, 0, 458746, 13, 0, 458747, 13, 0, 458748, 13, 0, 458749, 13, 0, 458750, 13, 0, 458751, 13, 0, 393216, 13, 0, 393217, 13, 0, 393218, 13, 0, 393219, 13, 0, 393220, 13, 0, 393221, 13, 0, 393222, 13, 0, 393223, 13, 0, 393224, 13, 0, 393225, 18, 0, 524280, 18, 0, 524281, 13, 0, 524282, 13, 0, 524283, 13, 0, 524284, 13, 0, 524285, 13, 0, 524286, 13, 0, 524287, 13, 0, 458752, 13, 0, 458753, 13, 0, 458754, 13, 0, 458755, 13, 0, 458756, 13, 0, 458757, 13, 0, 458758, 13, 0, 458759, 13, 0, 458760, 13, 0, 458761, 18, 0, 589816, 18, 0, 589817, 13, 0, 589818, 13, 0, 589819, 13, 0, 589820, 13, 0, 589821, 13, 0, 589822, 13, 0, 589823, 13, 0, 524288, 13, 0, 524289, 13, 0, 524290, 13, 0, 524291, 13, 0, 524292, 13, 0, 524293, 13, 0, 524294, 13, 0, 524295, 13, 0, 524296, 13, 0, 524297, 18, 0, 655352, 18, 0, 655353, 13, 0, 655354, 13, 0, 655355, 13, 0, 655356, 13, 0, 655357, 13, 0, 655358, 13, 0, 655359, 13, 0, 589824, 13, 0, 589825, 13, 0, 589826, 13, 0, 589827, 13, 0, 589828, 13, 0, 589829, 13, 0, 589830, 13, 0, 589831, 13, 0, 589832, 13, 0, 589833, 18, 0, 720888, 18, 0, 720889, 13, 0, 720890, 13, 0, 720891, 13, 0, 720892, 13, 0, 720893, 13, 0, 720894, 13, 0, 720895, 13, 0, 655360, 13, 0, 655361, 13, 0, 655362, 13, 0, 655363, 13, 0, 655364, 13, 0, 655365, 13, 0, 655366, 13, 0, 655367, 13, 0, 655368, 13, 0, 655369, 18, 0, 786424, 18, 0, 786425, 13, 0, 786426, 13, 0, 786427, 13, 0, 786428, 13, 0, 786429, 13, 0, 786430, 13, 0, 786431, 13, 0, 720896, 13, 0, 720897, 13, 0, 720898, 13, 0, 720899, 13, 0, 720900, 13, 0, 720901, 13, 0, 720902, 13, 0, 720903, 13, 0, 720904, 13, 0, 720905, 18, 0, 851960, 18, 0, 851961, 13, 0, 851962, 13, 0, 851963, 13, 0, 851964, 13, 0, 851965, 13, 0, 851966, 13, 0, 851967, 13, 0, 786432, 13, 0, 786433, 13, 0, 786434, 13, 0, 786435, 13, 0, 786436, 13, 0, 786437, 13, 0, 786438, 13, 0, 786439, 13, 0, 786440, 13, 0, 786441, 18, 0, 917496, 18, 0, 917497, 18, 0, 917498, 18, 0, 917499, 18, 0, 917500, 18, 0, 917501, 18, 0, 917502, 18, 0, 917503, 18, 0, 851968, 18, 0, 851969, 18, 0, 851970, 18, 0, 851971, 18, 0, 851972, 18, 0, 851973, 18, 0, 851974, 18, 0, 851975, 18, 0, 851976, 18, 0, 851977, 18, 0 )

[node name="Resources" type="TileMap" parent="TileData"]
modulate = Color( 1, 1, 1, 0.345098 )
tile_set = ExtResource( 10 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( -8, 21, 0, -7, 21, 0, -6, 21, 0, -5, 21, 0, -4, 21, 0, -3, 21, 0, -2, 21, 0, -1, 21, 0, -65535, 21, 0, -65534, 21, 0, -65533, 21, 0, -65532, 21, 0, -65531, 21, 0, -65530, 21, 0, -65529, 21, 0, -65528, 21, 0, -65527, 21, 0, 65528, 21, 0, 65529, 10, 0, 65530, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 10, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 21, 0, 131064, 21, 0, 131065, 10, 0, 131066, 10, 0, 131067, 10, 0, 131068, 10, 0, 131069, 10, 0, 131070, 10, 0, 131071, 10, 0, 65536, 10, 0, 65537, 10, 0, 65538, 10, 0, 65539, 10, 0, 65540, 10, 0, 65541, 10, 0, 65542, 10, 0, 65543, 10, 0, 65544, 10, 0, 65545, 21, 0, 196600, 21, 0, 196601, 10, 0, 196602, 10, 0, 196603, 10, 0, 196604, 10, 0, 196605, 10, 0, 196606, 10, 0, 196607, 10, 0, 131072, 10, 0, 131073, 10, 0, 131074, 10, 0, 131075, 10, 0, 131076, 10, 0, 131077, 10, 0, 131078, 10, 0, 131079, 10, 0, 131080, 10, 0, 131081, 21, 0, 262136, 21, 0, 262137, 10, 0, 262138, 10, 0, 262139, 10, 0, 262140, 10, 0, 262141, 10, 0, 262142, 10, 0, 262143, 10, 0, 196608, 10, 0, 196609, 10, 0, 196610, 10, 0, 196611, 10, 0, 196612, 10, 0, 196613, 10, 0, 196614, 10, 0, 196615, 10, 0, 196616, 10, 0, 196617, 21, 0, 327672, 21, 0, 327673, 10, 0, 327674, 10, 0, 327675, 10, 0, 327676, 10, 0, 327677, 10, 0, 327678, 10, 0, 327679, 10, 0, 262144, 10, 0, 262145, 10, 0, 262146, 10, 0, 262147, 10, 0, 262148, 10, 0, 262149, 10, 0, 262150, 10, 0, 262151, 10, 0, 262152, 10, 0, 262153, 21, 0, 393208, 21, 0, 393209, 10, 0, 393210, 10, 0, 393211, 10, 0, 393212, 10, 0, 393213, 10, 0, 393214, 10, 0, 393215, 10, 0, 327680, 10, 0, 327681, 10, 0, 327682, 10, 0, 327683, 10, 0, 327684, 10, 0, 327685, 10, 0, 327686, 10, 0, 327687, 10, 0, 327688, 10, 0, 327689, 21, 0, 458744, 21, 0, 458745, 10, 0, 458746, 10, 0, 458747, 10, 0, 458748, 10, 0, 458749, 10, 0, 458750, 10, 0, 458751, 10, 0, 393216, 10, 0, 393217, 10, 0, 393218, 10, 0, 393219, 10, 0, 393220, 10, 0, 393221, 10, 0, 393222, 10, 0, 393223, 10, 0, 393224, 10, 0, 393225, 21, 0, 524280, 21, 0, 524281, 10, 0, 524282, 10, 0, 524283, 10, 0, 524284, 10, 0, 524285, 10, 0, 524286, 10, 0, 524287, 10, 0, 458752, 10, 0, 458753, 10, 0, 458754, 10, 0, 458755, 10, 0, 458756, 10, 0, 458757, 10, 0, 458758, 10, 0, 458759, 10, 0, 458760, 10, 0, 458761, 21, 0, 589816, 21, 0, 589817, 10, 0, 589818, 10, 0, 589819, 10, 0, 589820, 10, 0, 589821, 10, 0, 589822, 10, 0, 589823, 10, 0, 524288, 10, 0, 524289, 10, 0, 524290, 10, 0, 524291, 10, 0, 524292, 10, 0, 524293, 10, 0, 524294, 10, 0, 524295, 10, 0, 524296, 10, 0, 524297, 21, 0, 655352, 21, 0, 655353, 10, 0, 655354, 10, 0, 655355, 10, 0, 655356, 10, 0, 655357, 10, 0, 655358, 10, 0, 655359, 10, 0, 589824, 10, 0, 589825, 10, 0, 589826, 10, 0, 589827, 10, 0, 589828, 10, 0, 589829, 10, 0, 589830, 10, 0, 589831, 10, 0, 589832, 10, 0, 589833, 21, 0, 720888, 21, 0, 720889, 10, 0, 720890, 10, 0, 720891, 10, 0, 720892, 10, 0, 720893, 10, 0, 720894, 10, 0, 720895, 10, 0, 655360, 10, 0, 655361, 10, 0, 655362, 10, 0, 655363, 10, 0, 655364, 10, 0, 655365, 10, 0, 655366, 10, 0, 655367, 10, 0, 655368, 10, 0, 655369, 21, 0, 786424, 21, 0, 786425, 10, 0, 786426, 10, 0, 786427, 10, 0, 786428, 10, 0, 786429, 10, 0, 786430, 10, 0, 786431, 10, 0, 720896, 10, 0, 720897, 10, 0, 720898, 10, 0, 720899, 10, 0, 720900, 10, 0, 720901, 10, 0, 720902, 10, 0, 720903, 10, 0, 720904, 10, 0, 720905, 21, 0, 851960, 21, 0, 851961, 11, 0, 851962, 11, 0, 851963, 11, 0, 851964, 11, 0, 851965, 11, 0, 851966, 11, 0, 851967, 11, 0, 786432, 11, 0, 786433, 11, 0, 786434, 11, 0, 786435, 11, 0, 786436, 11, 0, 786437, 11, 0, 786438, 11, 0, 786439, 11, 0, 786440, 11, 0, 786441, 21, 0, 917496, 21, 0, 917497, 21, 0, 917498, 21, 0, 917499, 21, 0, 917500, 21, 0, 917501, 21, 0, 917502, 21, 0, 917503, 21, 0, 851968, 21, 0, 851969, 21, 0, 851970, 21, 0, 851971, 21, 0, 851972, 21, 0, 851973, 21, 0, 851974, 21, 0, 851975, 21, 0, 851976, 21, 0, 851977, 21, 0, 1704012, 0, 0 )

[node name="Monsters" type="YSort" parent="." groups=["lostL", "pauseL"]]
pause_mode = 1
z_index = 40
script = ExtResource( 13 )

[node name="DiverPaths" type="Node2D" parent="Monsters"]

[node name="RetreatLeft" type="Position2D" parent="Monsters/DiverPaths"]
position = Vector2( -520, -168 )

[node name="RetreatRight" type="Position2D" parent="Monsters/DiverPaths"]
position = Vector2( 516, -182 )

[node name="StartLeft" type="Path2D" parent="Monsters/DiverPaths"]
curve = SubResource( 31 )

[node name="StartRight" type="Path2D" parent="Monsters/DiverPaths"]
curve = SubResource( 32 )

[node name="SpawnTween" type="Tween" parent="Monsters"]

[node name="WaveGenerator" parent="Monsters" instance=ExtResource( 5 )]

[node name="BattleAmbience" parent="Monsters" instance=ExtResource( 4 )]

[node name="KeeperPosition" type="Position2D" parent="."]
position = Vector2( -22, -35 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="Camera2D" type="Camera2D" parent="." groups=["cameras"]]
position = Vector2( 0, 119 )
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 17 )

[node name="Keeper" parent="." instance=ExtResource( 6 )]
position = Vector2( 1, 104 )

[node name="Dome" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -15 )

[node name="Canvas" type="CanvasLayer" parent="."]
layer = 2

[node name="Hud" parent="Canvas" instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_right = 0.0

[node name="ScreenCover" type="TextureRect" parent="Canvas" groups=["unstyled"]]
visible = false
material = SubResource( 34 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" parent="Canvas" groups=["level_canvas_overlay"] instance=ExtResource( 9 )]

[node name="PauseLabel" type="Label" parent="Canvas"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -57.0
margin_right = 71.0
margin_bottom = 32.0
theme = ExtResource( 11 )
text = "level.paused"
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="Canvas/PauseLabel"]

[node name="Cheats" parent="Canvas" instance=ExtResource( 2 )]
visible = false

[node name="EffectHandler" type="Node2D" parent="."]
script = ExtResource( 16 )
minimumWorldVolume = -20.0

[node name="MineAttenuation" type="Path2D" parent="EffectHandler"]
curve = SubResource( 35 )
script = ExtResource( 14 )
length = 600.0
